@@ -4,11 +4,7 @@ import ch.jtaf.service.UserService;
 import ch.jtaf.ui.layout.MainLayout;
 import com.vaadin.flow.component.html.H1;
 import com.vaadin.flow.component.orderedlayout.VerticalLayout;
-import com.vaadin.flow.router.BeforeEnterEvent;
-import com.vaadin.flow.router.BeforeEnterObserver;
-import com.vaadin.flow.router.HasDynamicTitle;
-import com.vaadin.flow.router.Route;
-import com.vaadin.flow.router.RouterLink;
+import com.vaadin.flow.router.*;
 import com.vaadin.flow.server.auth.AnonymousAllowed;
 
 @SuppressWarnings("unused")
@@ -37,7 +33,7 @@ public class ConfirmView extends VerticalLayout implements HasDynamicTitle, Befo
     public void beforeEnter(BeforeEnterEvent beforeEnterEvent) {
         var queryParameters = beforeEnterEvent.getLocation().getQueryParameters();
         if (queryParameters.getParameters().containsKey("cf")) {
-            boolean confirmed = userService.confirm(queryParameters.getParameters().get("cf").get(0));
+            boolean confirmed = userService.confirm(queryParameters.getParameters().get("cf").getFirst());
 
             if (confirmed) {
                 okDiv.setVisible(true);
